--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ markdown_extensions:
   - admonition
   - meta
   - toc:
-      permalink: true
+      toc_depth : "1-1"
 
 plugins:
   - include-markdown
