Addition of Project Standards Team

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,5 +60,6 @@ nav:
     - Groups:
       - approach/groups/project-management-committee.md
       - approach/groups/project-advisory-team.md
+      - approach/groups/project-standards-team.md
       - approach/groups/project-technical-team.md
   - Documentation: documentation/temporary-page.md
