Rename ACP Project as ClimSA Project and update section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ nav:
   - About:
     - History: about/history.md
     - Funding: 
-      - ACP Project: about/funding/acp-project.md
+      - ClimSA Project: about/funding/acp-project.md
     - License: about/license.md  
     - Frequently asked questions: about/faq.md
     - Glossary: about/glossary.md
